--- a/public/partials/main-page.html
+++ b/public/partials/main-page.html
@@ -2,3 +2,10 @@
 <link rel="stylesheet" type="text/css" media="screen" href="./css/main-page.css">
 <h1>Main page test</h1>
 
+<table>
+    <tr ng-repeat="thread in ctrl.threads">
+        <td>{{thread.title}} <br>
+            {{thread.content | limitTo: 20}}...</td>
+        <td>Likes: 0</td>
+    </tr>
+</table>
