--- a/public/partials/navigation.html
+++ b/public/partials/navigation.html
@@ -4,7 +4,44 @@
 </div> -->
 
 
-<nav class="navbar navbar-inverse">
+
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <a href="#" class="navbar-brand">FORUM</a>
+    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-lable="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarsExample04">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a href="#" class="nav-link">
+            "Home "
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Sign Up</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Login</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-md-0">
+        <input type="text" class="form-control" placeholder="search">
+      </form>
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+<!-- <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -49,4 +86,4 @@
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
   </div>
-</nav>
+</nav> -->
