added missing entry for login.html to index.html

--- a/public/partials/navigation.html
+++ b/public/partials/navigation.html
@@ -20,13 +20,13 @@
         </li>
         <li class="nav-item">
             <a href="#" class="nav-link">
-                <span ng-if"! ctrl.loggedIn" ng-click="ctrl.showSignup = ! ctrl.showSignup; ctrl.showLogin = false; ctrl.loginErr = false">
+                <span ng-if="! ctrl.loggedIn" ng-click="ctrl.showSignup = ! ctrl.showSignup; ctrl.showLogin = false; ctrl.loginErr = false">
                 Sign Up
             </a>
         </li>
         <li class="nav-item">
             <a href="#" class="nav-link">
-                <span ng-if"! ctrl.loggedIn" ng-click="ctrl.showLogin = ! ctrl.showLogin; ctrl.showSignup = false; ctrl.loginErr = false">
+                <span ng-if="! ctrl.loggedIn" ng-click="ctrl.showLogin = ! ctrl.showLogin; ctrl.showSignup = false; ctrl.loginErr = false">
                 Login
             </a>
         </li>
