--- a/public/partials/navigation.html
+++ b/public/partials/navigation.html
@@ -30,6 +30,12 @@
                 Login
             </a>
         </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">
+                <span ng-show="ctrl.loggedIn" ng-click="ctrl.logOut()">
+                Logout
+            </a>
+        </li>
       </ul>
       <form class="form-inline my-2 my-md-0">
         <input type="text" class="form-control" placeholder="search">
