--- a/public/partials/main-page.html
+++ b/public/partials/main-page.html
@@ -7,7 +7,7 @@
     
     <div class="row justify-content-between mb-4">
         <div class="col-4">
-            <button class="w-100 btn btn-success">New Post</button>
+            <button class="w-100 btn btn-success" ng-click="ctrl.newPostClick()">New Post</button>
         </div>
         
         <div class="col-4 btn-group">
