--- a/public/partials/navigation.html
+++ b/public/partials/navigation.html
@@ -14,7 +14,7 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a href="#" class="nav-link">
-            "Home "
+            Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
