--- a/public/partials/main-page.html
+++ b/public/partials/main-page.html
@@ -54,8 +54,8 @@
     
     <table class="table">
         <tr ng-repeat="thread in ctrl.threads | orderBy: ctrl.currOrder | filter: currFilter">
-            <td ng-click="ctrl.viewThread = thread; ctrl.changeInclude('thread')">
-                <h3 class="thread-list-title"> {{thread.title}} </h3> 
+            <td>
+                <h3 class="thread-list-title" ng-click="ctrl.viewThread = thread; ctrl.changeInclude('thread')"> <a href="#">{{thread.title}}</a> </h3> 
                 <span class="thread-list-user">
                     Posted by: 
                     <a class='username-link' 
@@ -64,7 +64,7 @@
                     </a>
                     @ {{thread.createdAt | date: 'MM/dd @h:mm:ssa'}}
                 </span>
-                <p>
+                <p ng-click="ctrl.viewThread = thread; ctrl.changeInclude('thread')">
                     {{thread.content | limitTo: 40}}...
                 </p>
             </td>
