--- a/public/partials/navigation.html
+++ b/public/partials/navigation.html
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="navbarsExample04">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a href="#" class="nav-link">
+          <a href="#" class="nav-link" ng-click="ctrl.changeInclude('main-page')">
             "Home "
             <span class="sr-only">(current)</span>
           </a>
