--- a/public/partials/new-thread.html
+++ b/public/partials/new-thread.html
@@ -1,4 +1,17 @@
 
 <div class="container">
     <h1>Add code for new thread (post) view here!</h1>
+
+    <form ng-submit="ctrl.createThread()">
+        <label>
+            Title
+            <input type="text" ng-model="ctrl.newThread.title" placeholder="Thread Title"/>
+        </label>
+        <label>
+            Content
+            <textarea ng-model="ctrl.newThread.content" cols="30" rows="10" placeholder="Thread content"></textarea>
+        </label>
+        <input type="submit" value="Create Thread">
+    </form>
+
 </div>
