--- a/public/partials/thread.html
+++ b/public/partials/thread.html
@@ -1,30 +1,39 @@
+<link rel="stylesheet" type="text/css" media="screen" href="./css/thread.css">
 <div class="container">
-    <h1>{{ctrl.viewThread.title}}</h2>
-    By <a href="#">{{ctrl.viewThread.username ? ctrl.viewThread.username : 'unknown' }}</a>
-    <p ng-if="!ctrl.showThreadUpdateFields"> {{ctrl.viewThread.content}} </p>
-    <br>
-    <textarea ng-if="ctrl.showThreadUpdateFields" type="text" ng-model="ctrl.updatingThread.content"> </textarea>
-    
-    <!-- Edit if you are the owner -->
-        <!-- Edit Thread -->
-    <button ng-if="ctrl.viewThread.userRef === ctrl.loggedInUser._id && !ctrl.showThreadUpdateFields" ng-click="ctrl.showThreadUpdate(ctrl.viewThread)">Edit</button>
-        <!-- Delete thread -->
-    <button ng-if="ctrl.viewThread.userRef === ctrl.loggedInUser._id && !ctrl.showThreadUpdateFields" ng-click="ctrl.deleteThread(ctrl.viewThread._id)">Delete</button>
+    <div class="container">
+        <h2>{{ctrl.viewThread.title}}</h2>
+        By <a href="#">{{ctrl.viewThread.username ? ctrl.viewThread.username : 'unknown' }}</a>
+        <p ng-if="!ctrl.showThreadUpdateFields"> {{ctrl.viewThread.content}} </p>
+        <br>
+        <textarea ng-if="ctrl.showThreadUpdateFields" type="text" cols="70" rows="10" ng-model="ctrl.updatingThread.content"> </textarea>
 
+        <!-- Edit if you are the owner -->
+            <!-- Edit Thread -->
+        <button ng-if="ctrl.viewThread.userRef === ctrl.loggedInUser._id && !ctrl.showThreadUpdateFields" ng-click="ctrl.showThreadUpdate(ctrl.viewThread)" class="btn-info">Edit Post</button>
+            <!-- Delete thread -->
+        <button ng-if="ctrl.viewThread.userRef === ctrl.loggedInUser._id && !ctrl.showThreadUpdateFields" ng-click="ctrl.deleteThread(ctrl.viewThread._id)" class="btn-danger">Delete Post</button>
         <!-- Edit Options: Save or Cancel -->
-    <button ng-if="ctrl.showThreadUpdateFields" ng-click="ctrl.saveThreadUpdate(ctrl.viewThread)">Save</button>
-    <button ng-if="ctrl.showThreadUpdateFields" ng-click="ctrl.cancelThreadUpdate(ctrl.viewThread)">Cancel</button>
+    </div>
+    <div class="container">
+        <button ng-if="ctrl.showThreadUpdateFields" ng-click="ctrl.saveThreadUpdate(ctrl.viewThread)" class="btn-success">Save</button>
+        <button ng-if="ctrl.showThreadUpdateFields" ng-click="ctrl.cancelThreadUpdate(ctrl.viewThread)" class="btn-warning">Cancel</button>
+    </div>
 
-    <h3>Comments</h3>
-    <ul>
-        <li ng-repeat="comment in ctrl.viewThread.comments track by $index"> {{ comment }}</li>
-    </ul>
+    <div class="container comments">
+        <h4>Comments</h4>
+        <ul>
+            <li ng-repeat="comment in ctrl.viewThread.comments track by $index"> {{ comment }}</li>
+        </ul>
+    </div>
 
-    <h3>New Comment</h3>
-    <form ng-submit="ctrl.addComment(ctrl.viewThread)">
-        <input type="text" ng-model="ctrl.newComment" />
-        <input type="submit" value="Sumbit Comment">
-    </form>
-    
-    <div ng-click="ctrl.viewThread = ''; ctrl.changeInclude('main-page')" class="btn btn-primary">Go Back</div>
+    <div class="container newComment">
+        <h4>New Comment</h4>
+        <form class="newComment" ng-submit="ctrl.addComment(ctrl.viewThread)">
+            <input type="text" size="50" ng-model="ctrl.newComment" />
+            <input type="submit" value="Submit Comment" class="btn-success">
+        </form>
+        <div id="goBack" ng-click="ctrl.viewThread = ''; ctrl.changeInclude('main-page')" class="btn btn-secondary">Go Back</div>
+    </div>
+
+
 </div>
