--- a/public/css/thread.css
+++ b/public/css/thread.css
@@ -1,8 +1,10 @@
 .newComment {
-    /* margin-top: 3em; */
     margin-bottom: 1em;
 }
 .comments {
     margin-top: 4em;
     margin-bottom: 4em;
+}
+#addPost {
+    margin-top: 1.5em;
 }
