--- a/public/partials/new-thread.html
+++ b/public/partials/new-thread.html
@@ -1,12 +1,12 @@
 <link rel="stylesheet" type="text/css" media="screen" href="./css/thread.css">
 <div class="container">
-    <h2>Add a Post</h2>
     <div class="col-sm-5">
+        <h2 id="addPost">Add a Post</h2>
         <form class="form-group" ng-submit="ctrl.createThread()">
-            <input type="text" ng-model="ctrl.newThread.title" size="50" autocomplete='off' placeholder="Thread Title" required autofocus/>
-            <textarea ng-model="ctrl.newThread.content" cols="70" rows="10" placeholder="Thread Content" required></textarea>
+            <input type="text" ng-model="ctrl.newThread.title" size="60" autocomplete='off' placeholder="Thread Title" required autofocus/>
+            <textarea ng-model="ctrl.newThread.content" cols="62" rows="10" placeholder="Thread Content" required></textarea>
             <input type="submit" class="btn btn-success" value="Create Thread">
             <div id="goBack" ng-click="ctrl.viewThread = ''; ctrl.changeInclude('main-page')" class="btn btn-secondary">Go Back</div>
-</form>
+        </form>
     </div>
 </div>
