--- a/public/css/thread.css
+++ b/public/css/thread.css
@@ -2,9 +2,21 @@
     margin-bottom: 1em;
 }
 .comments {
-    margin-top: 4em;
+    margin-top: 1.5em;
     margin-bottom: 4em;
 }
 #addPost {
     margin-top: 1.5em;
+}
+.thread-view {
+    margin-top: 2em;
+}
+.blue {
+    color: royalblue;
+}
+.dodgerblue {
+    color: dodgerblue;
+}
+.darkblue {
+    color: darkblue;
 }
