Made comment list a little more readable

--- a/public/partials/thread.html
+++ b/public/partials/thread.html
@@ -22,7 +22,7 @@
     <div class="container comments">
         <h4 class="dodgerblue">Comments</h4>
         <ul>
-            <li ng-repeat="comment in ctrl.viewThread.comments track by $index"> {{ comment }}</li>
+            <li class="list" ng-repeat="comment in ctrl.viewThread.comments track by $index"> {{ comment }}</li>
         </ul>
     </div>
 
