Add 'X' to close error message when not logged in

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,3 +5,11 @@
 .err-msg {
     color: red;
 }
+.black {
+    color: black;
+    font-size: 1em;
+    cursor: pointer;
+}
+.X {
+    padding: 0 0.5em;
+}
