Blocked guest user from making comments to a thread.

--- a/public/partials/thread.html
+++ b/public/partials/thread.html
@@ -26,11 +26,11 @@
         </ul>
     </div>
 
-    <div class="container newComment">
+    <div ng-show="ctrl.loggedIn" class="container newComment">
         <h4 class="darkblue">New Comment</h4>
         <form class="newComment" ng-submit="ctrl.addComment(ctrl.viewThread)">
-            <input type="text" size="60" ng-model="ctrl.newComment" />
-            <input type="submit" value="Submit Comment" class="btn-success">
+            <textarea type="text" cols="70" rows="10" ng-model="ctrl.newComment"></textarea>
+            <br/><input type="submit" value="Submit Comment" class="btn-success">
         </form>
         <div id="goBack" ng-click="ctrl.viewThread = ''; ctrl.changeInclude('main-page')" class="btn btn-secondary">Go Back</div>
     </div>
