Allow guest to use 'Go Back' button that I inadvertantly hid from them.

--- a/public/partials/thread.html
+++ b/public/partials/thread.html
@@ -32,6 +32,6 @@
             <textarea type="text" cols="70" rows="10" ng-model="ctrl.newComment"></textarea>
             <br/><input type="submit" value="Submit Comment" class="btn-success">
         </form>
-        <div id="goBack" ng-click="ctrl.viewThread = ''; ctrl.changeInclude('main-page')" class="btn btn-secondary">Go Back</div>
     </div>
+    <div ng-show="true" id="goBack" ng-click="ctrl.viewThread = ''; ctrl.changeInclude('main-page')" class="btn btn-secondary">Go Back</div>
 </div>
