--- a/public/partials/navigation.html
+++ b/public/partials/navigation.html
@@ -14,32 +14,33 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a href="#" class="nav-link" ng-click="ctrl.changeInclude('main-page')">
-            Home 
+            Home
             <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item">
             <a href="#" class="nav-link">
                 <span ng-if="! ctrl.loggedIn" ng-click="ctrl.showSignup = ! ctrl.showSignup; ctrl.showLogin = false; ctrl.loginErr = false; ctrl.errorMsg = ''">
-                Sign Up
+                    Sign Up
                 </span>
             </a>
         </li>
         <li class="nav-item">
             <a href="#" class="nav-link">
                 <span ng-if="! ctrl.loggedIn" ng-click="ctrl.showLogin = ! ctrl.showLogin; ctrl.showSignup = false; ctrl.loginErr = false; ctrl.errorMsg = ''">
-                Login
+                    Login
                 </span>
             </a>
         </li>
         <li class="nav-item">
             <a href="#" class="nav-link">
                 <span ng-show="ctrl.loggedIn" ng-click="ctrl.logOut()">
-                Logout
+                    Logout
                 </span>
             </a>
         </li>
       </ul>
+      <span ng-show="ctrl.loggedInUser.username" style="color: white; padding-right: 3em;" class="">Welcome, {{ctrl.loggedInUser.username}}</span>
       <form class="form-inline my-2 my-md-0">
         <input type="text" class="form-control" placeholder="search">
       </form>
