--- a/public/partials/thread.html
+++ b/public/partials/thread.html
@@ -3,7 +3,7 @@
     <div class="container thread-view">
         <h3 class="blue">{{ctrl.viewThread.title}}</h3>
         By <a href="#">{{ctrl.viewThread.username ? ctrl.viewThread.username : 'unknown' }}</a>
-        <p ng-if="!ctrl.showThreadUpdateFields"> {{ctrl.viewThread.content}} </p>
+        <p class="display-newlines" ng-if="!ctrl.showThreadUpdateFields">{{ctrl.viewThread.content}}</p>
         <br>
         <textarea ng-if="ctrl.showThreadUpdateFields" type="text" cols="70" rows="10" ng-model="ctrl.updatingThread.content"> </textarea>
 
@@ -24,15 +24,13 @@
 
         <div ng-repeat="comment in ctrl.viewThread.comments">
             <div class="row justify-content-between">
-                <div class="">
+                <div class="container" ng-if="comment.userRef === ctrl.loggedInUser._id">
                     <a href="#">{{comment.username}}</a> @ {{comment.createdAt | date: 'MM/dd @h:mm:ssa'}}
-                </div>
-                <div class="" ng-if="comment.userRef === ctrl.loggedInUser._id">
-                    <a href="#" ng-click="ctrl.showCommentUpdate(comment)">[Edit]</a> &nbsp;&nbsp;
+                    &nbsp;&nbsp;&nbsp;&nbsp;<a href="#" ng-click="ctrl.showCommentUpdate(comment)">[Edit]</a> &nbsp;&nbsp;
                     <a href="#" ng-click="ctrl.deleteComment(comment)">[Delete]</a>
                 </div>
             </div>
-            <p ng-if="!comment.showCommentUpdateFields">{{comment.commentContent}}</p>
+            <p class="display-newlines" ng-if="!comment.showCommentUpdateFields">{{comment.commentContent}}</p>
             <div class="container" ng-if="comment.showCommentUpdateFields">
                 <textarea cols="80" rows="5" ng-model="comment.updating.commentContent"></textarea>
                 <div class="container">
@@ -42,7 +40,6 @@
             </div>
             <hr>
         </div>
-
     </div>
 
     <div ng-show="ctrl.loggedIn" class="container">
