initial search setup

--- a/public/partials/navigation.html
+++ b/public/partials/navigation.html
@@ -41,8 +41,9 @@
         </li>
       </ul>
       <span ng-show="ctrl.loggedInUser.username" style="color: white; padding-right: 3em;" class="">Welcome, {{ctrl.loggedInUser.username}}</span>
-      <form class="form-inline my-2 my-md-0">
-        <input type="text" class="form-control" placeholder="search">
+      <form ng-submit="ctrl.changeInclude('main-page'); ctrl.changeFilter('search')" class="form-inline my-2 my-md-0">
+        <input type="text" class="form-control" ng-model="ctrl.searchText" placeholder="search">
+        <input type="submit" value="Search">
       </form>
 
     </div>
