--- a/public/partials/main-page.html
+++ b/public/partials/main-page.html
@@ -62,7 +62,6 @@
                 </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#"
-                    ng-click="ctrl.changeFilter('search')"
                     ng-class="(ctrl.currFilterSelector === 'search') ? 'active' : ''">
                     Search Results
                 </a>
@@ -73,7 +72,7 @@
 
     <table class="table">
         <!-- <tr ng-repeat="thread in ctrl.threads | orderBy: ctrl.currOrder | filter: ctrl.currFilter"> -->
-        <tr ng-repeat="thread in ctrl.threads | orderBy: ctrl.currOrder | threadFilters:ctrl.currFilterSelector:ctrl.loggedInUser">
+        <tr ng-repeat="thread in ctrl.threads | orderBy: ctrl.currOrder | threadFilters:ctrl.currFilterSelector:ctrl.loggedInUser | filter:ctrl.searchText">
             <td>
                 <h4 class="thread-list-title" ng-click="ctrl.viewThread = thread; ctrl.changeInclude('thread')"> <a href="#">{{thread.title}}</a> </h4>
                 <span class="thread-list-user">
