--- a/public/partials/thread.html
+++ b/public/partials/thread.html
@@ -21,13 +21,13 @@
 
     <div class="container comments">
         <h4 class="dodgerblue">Comments</h4>
-
         <div ng-repeat="comment in ctrl.viewThread.comments">
             <div class="row justify-content-between">
-                <div class="container" ng-if="comment.userRef === ctrl.loggedInUser._id">
+                <div class="container" >
                     <a href="#">{{comment.username}}</a> @ {{comment.createdAt | date: 'MM/dd @h:mm:ssa'}}
-                    &nbsp;&nbsp;&nbsp;&nbsp;<a href="#" ng-click="ctrl.showCommentUpdate(comment)">[Edit]</a> &nbsp;&nbsp;
-                    <a href="#" ng-click="ctrl.deleteComment(comment)">[Delete]</a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <a ng-if="comment.userRef === ctrl.loggedInUser._id" href="#" ng-click="ctrl.showCommentUpdate(comment)">[Edit]</a> &nbsp;&nbsp;
+                    <a ng-if="comment.userRef === ctrl.loggedInUser._id" href="#" ng-click="ctrl.deleteComment(comment)">[Delete]</a>
                 </div>
             </div>
             <p class="display-newlines" ng-if="!comment.showCommentUpdateFields">{{comment.commentContent}}</p>
