added a list of threads and comments to user profile page

--- a/public/partials/main-page.html
+++ b/public/partials/main-page.html
@@ -78,7 +78,7 @@
                 <span class="thread-list-user">
                     Posted by:
                     <a class='username-link'
-                        ng-click="ctrl.getViewUser(thread.userRef); ctrl.changeInclude('user-profile')" href="#">
+                        ng-click="ctrl.showUserProfile(thread.userRef)" href="#">
                         {{thread.username ? thread.username : 'unknown' }}
                     </a>
                     @ {{thread.createdAt | date: 'MM/dd @h:mm:ssa'}}
