--- a/public/partials/main-page.html
+++ b/public/partials/main-page.html
@@ -39,7 +39,7 @@
 
         <div class="col-4 btn-group">
             <button class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Filter</button>
-            <div class="dropdown-menu">
+            <div class="dropdown-menu col-4">
                 <a class="dropdown-item" href="#" 
                     ng-click="ctrl.changeFilter('')"
                     ng-class="(ctrl.currFilterSelector === '') ? 'active' : ''">
