--- a/public/partials/navigation.html
+++ b/public/partials/navigation.html
@@ -35,6 +35,13 @@
         <li class="nav-item">
             <a href="#" class="nav-link">
                 <span ng-show="ctrl.loggedIn" ng-click="ctrl.logOut()">
+                    Profile
+                </span>
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">
+                <span ng-show="ctrl.loggedIn" ng-click="ctrl.getViewUser(loggedInUser); ctrl.changeInclude('user-profile')">
                     Logout
                 </span>
             </a>
